# GenPos

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  production_plan.md
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  ruff.toml  start.sh
apps/api/scripts/: register_daily_schedule.py
apps/api/src/: main.py
apps/api/src/agents/: __init__.py  base.py  compliance_reviewer.py  founder_copilot.py  llm_client.py  note_writer.py  orchestrator.py  strategy_planner.py  visual_designer.py
apps/api/src/core/: config.py  database.py  product_catalog_prompt.py  security.py  shanghai_calendar.py  storage.py  tenant.py
apps/api/src/models/: __init__.py  agent_team.py  analytics.py  asset.py  base.py  chat_message.py  generation.py  merchant.py  note_package.py  persona.py  product.py  prompt.py
apps/api/src/schemas/: __init__.py  agent_team.py  analytics.py  asset.py  chat.py  common.py  export.py  generation.py  merchant.py  note_package.py  persona.py  product.py  review.py
apps/api/src/services/: __init__.py  agent_team_service.py  analytics_service.py  asset_service.py  chat_service.py  export_service.py  fatigue_service.py  generation_service.py  image_generation_service.py  image_render_service.py  image_upload_normalize.py  merchant_service.py  note_package_service.py  persona_service.py  product_catalog_service.py  product_service.py  ranking_service.py  review_service.py
apps/api/src/temporal/: client.py  (+2 more)
apps/api/tests/: conftest.py  test_asset_bulk.py  test_asset_pack_service.py  test_image_upload_normalize.py  test_product_assets.py
(+75 files in other folders)
